@@ -1782,18 +1782,6 @@ automatic dependency tracking, the @file{Makefile} must depend on
 @code{$(BUILT_SOURCES)}.  This can cause these sources to be rebuilt at
 what might seem like funny times.
 
-There is another variable that can be used to list built sources.  It is
-called @code{PRE_BUILT_SOURCES}.
-@vindex PRE_BUILT_SOURCES
-This variable should be used to list any sources that are required
-before dependency computation on the @code{BUILT_SOURCES} can be done.
-For instance, automatically-generated header files used by other
-automatically generated files would be listed here.
-
-Note that if any files in @code{PRE_BUILT_SOURCES} is rebuilt, then all
-the dependency information for every object will need to be recomputed.
-So this variable should be used sparingly.
-
 
 @node Other GNU Tools
 @chapter Other GNU Tools
@@ -1908,8 +1896,8 @@ file was last modified.  The @file{version.texi} support requires the
 
 Sometimes an info file actually depends on more than one @samp{.texi}
 file.  For instance, in GNU Hello, @file{hello.texi} includes the file
-@file{gpl.texi} You can tell Automake about these dependencies using the
-@samp{@var{texi}_TEXINFOS} variable.  Here is how Hello does it:
+@file{gpl.texi}.  You can tell Automake about these dependencies using
+the @samp{@var{texi}_TEXINFOS} variable.  Here is how Hello does it:
 @vindex TEXINFOS
 @vindex _TEXINFOS
 
