@@ -1,3 +1,3 @@
-@set UPDATED 3 June 1997
+@set UPDATED 22 June 1997
 @set EDITION 1.1q
 @set VERSION 1.1q
