@@ -1,5 +1,11 @@
 Sun Jun 22 14:01:59 1997  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_configure): Don't handle PRE_BUILT_SOURCES.
+	(handle_built_sources): Likewise; don't have `all' depend on
+	BUILT_SOURCES.
+	* depend.am (DEPS_MAGIC): New variable.
+	(.deps/.P): Depend on BUILT_SOURCES again.
+
 	* texinfos.am: Use ||, not ;.
 
 Tue Jun 10 11:04:16 1997  Tom Tromey  <tromey@cygnus.com>
